logs/Slang/generated/keywords/5.6.2--keyword_strong.sv.log
name: strong
description: The 'strong' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_strong.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_strong.sv:8:8: error: expected declarator
    bit strong;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_strong.sv:8:9: error: expected member
    bit strong;
        ^~~~~~
